Refactor CV section and update content

--- a/index.html
+++ b/index.html
@@ -508,14 +508,13 @@
             </div>
 
             <div class="nav-tabs">
-                <button class="nav-tab active" onclick="showSection('about')">About</button>
-                <button class="nav-tab" onclick="showSection('cv')">CV</button>
+                <button class="nav-tab active" onclick="showSection('cv')">CV</button>
                 <button class="nav-tab" onclick="showSection('projects')">Projects</button>
             </div>
         </div>
 
-        <!-- About Section -->
-        <div id="about" class="content-section active">
+        <!-- CV Section (Combined Experience, Education, Skills) -->
+        <div id="cv" class="content-section active">
             <div class="cv-section">
                 <h3>Statement of Purpose</h3>
                 <div class="cv-item-paragraph">
@@ -529,26 +528,26 @@
                     <p>Committed to the core values of librarianship: equitable access to information for all patrons, intellectual freedom, preservation of cultural heritage, and universal access to knowledge. Passionate about making historical records, primary sources, and digital collections accessible to researchers, scholars, and the public.</p>
                 </div>
             </div>
-        </div>
 
-        <!-- CV Section (Combined Experience, Education, Skills) -->
-        <div id="cv" class="content-section">
             <div class="cv-section">
                 <h3>Education</h3>
                 
                 <div class="cv-item">
                     <h4>Master of Science in Library and Information Science</h4>
-                    <div class="cv-meta">University of Illinois, Urbana-Champaign iSchool • Aug 2024 - Apr 2027 • GPA 4.0</div>
+                    <div class="cv-meta">University of Illinois, Urbana-Champaign iSchool • Aug 2024 - Apr 2026 • GPA 4.0</div>
                     <p><strong>Coursework:</strong></p>
                     <ul>
-                        <li>Web Archiving (Dr. Emily Maemura)</li>
-                        <li>Digital Preservation (Dr. Emily Maemura)</li>
-                        <li>Archive Administration</li>
+                        <li>Archive Administration (Dr. Melissa Salrin)</li>
+                        <li>Archiving A/V Materials (Dr. Ashley Blewer)</li>
                         <li>Bibliographic Metadata (Dr. Bobby Bothmann)</li>
-                        <li>Information, Organization, and Access (Dr. Emily Maemura)</li>
-                        <li>Libraries, Information and Society (Dr. Emily Knox)</li>
-                        <li>Introduction to Digital Humanities (Dr. Ryan Cordell)</li>
+                        <li>Community Archives (Dr. Pat Cain)</li>
+                        <li>Culture at Scale (Dr. Zoe LeBlanc)</li>
                         <li>Data-Driven Practices in Libraries (Dr. Sara Goek)</li>
+                        <li>Digital Preservation (Dr. Emily Maemura)</li>
+                        <li>Information, Organization, and Access (Dr. Emily Maemura)</li>
+                        <li>Introduction to Digital Humanities (Dr. Ryan Cordell)</li>
+                        <li>Libraries, Information and Society (Dr. Emily Knox)</li>
+                        <li>Web Archiving (Dr. Emily Maemura)</li>
                     </ul>
                     <p style="margin-top: 1rem;"><strong>Research Focus:</strong> Web preservation, visual data representation, cybersecurity in library systems, bibliometrics</p>
                 </div>
@@ -571,6 +570,11 @@
                         <li>Conduct interviews with university librarians and archivists via Zoom</li>
                         <li>Support peers with class selection and iSchool onboarding</li>
                         <li>Plan and host community-building events for the LIS student body</li>
+                    </ul>
+                    <p style="margin-top: 1rem;"><strong>Web Application Developer</strong></p>
+                    <p style="margin-top: 0.25rem; margin-bottom: 0.5rem;"><em>Data Storytelling Toolkit for Libraries • December 2025 - Present</em></p>
+                    <ul>
+                        <li>Implemented data models on website</li>
                     </ul>
                 </div>
 
@@ -714,6 +718,18 @@
                     </div>
                 </div>
             </div>
+
+            <div class="cv-section">
+                <h3>Professional Organizations</h3>
+                <div class="cv-item">
+                    <ul>
+                        <li>American Library Association</li>
+                        <li>California Library Association</li>
+                        <li>Society of American Archivists</li>
+                    </ul>
+                </div>
+            </div>
+
         </div>
 
         <!-- Projects Section -->
@@ -813,9 +829,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- Skills Section -->
-
     </div>
 
     <script>
