Update skills and project descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
                     <div class="skill-tags">
                         <span class="skill-tag">Digital Preservation</span>
                         <span class="skill-tag">Web Archiving</span>
-                        <span class="skill-tag">Metadata Standards</span>
+                        <span class="skill-tag">Sustainable Preservation</span>
                         <span class="skill-tag">Open Access</span>
                         <span class="skill-tag">Knowledge Equity</span>
                         <span class="skill-tag">Accessibility</span>
@@ -742,7 +742,7 @@
                         <h4>HathiTrust Research Center Practicum</h4>
                         <div class="cv-meta">Fall 2025 - Present</div>
                         <ul>
-                            <li>Generating research dataset of public library developments by extracting data from OCR'd library directories</li>
+                            <li>Generated research dataset of 1870s public library surveys by extracting data from OCR'd library directories</li>
                             <li>Applying computational text analysis to public domain texts</li>
                         </ul>
                     </div>
@@ -752,7 +752,8 @@
                         <div class="cv-meta">Fall 2025</div>
                         <ul>
                             <li>Installing, configuring, and demonstrating DSpace (MIT's open source digital repository)</li>
-                            <li>Learning OAIS compliance and PREMIS metadata schema</li>
+                            <li>Learned OCIS compliance and PREMIS metadata schema</li>
+                            <li>Highlighted the system's community-based organization schema</li>
                         </ul>
                     </div>
 
@@ -770,8 +771,9 @@
                         <h4>IMLS Public Library Survey Data Analysis</h4>
                         <div class="cv-meta">2024</div>
                         <ul>
-                            <li>Analyzed and visualized IMLS Public Library Survey data</li>
-                            <li>Compared public data sources with national library survey data to assess community service</li>
+                            <li>Analyzed and visualized the IMLS Public Library Survey data model</li>
+                            <li>Compared public data sources with national library survey data to assess community need</li>
+                            <li>Identified exemplary library systems for peer comparison</li>
                         </ul>
                     </div>
 
@@ -780,7 +782,7 @@
                         <div class="cv-meta">Fall 2024</div>
                         <ul>
                             <li>Researched cybersecurity threats to library systems</li>
-                            <li>Created toolkit with prevention strategies and best practices</li>
+                            <li>Created research poster of incidents across America and Europe</li>
                         </ul>
                     </div>
                 </div>
@@ -794,6 +796,8 @@
                     <div class="cv-meta">Prison Library Support Network</div>
                     <ul>
                         <li>Providing reference services to incarcerated individuals</li>
+                        <li>Sourced and formatted documents to fit tight page limits</li>
+                        <li>Complied with institution policies and content guidelines</li>
                     </ul>
                 </div>
 
@@ -811,8 +815,8 @@
                     <h4>Metadata Quality Volunteer</h4>
                     <div class="cv-meta">Open Library</div>
                     <ul>
-                        <li>Identified and merged duplicate work records</li>
-                        <li>Fixed ISBN errors in OCLC's WorldCat</li>
+                        <li>Identified duplicate work records</li>
+                        <li>Submitted duplicates to system administrators</li>
                         <li>Improved searchability and data quality across bibliographic records</li>
                     </ul>
                 </div>
@@ -823,7 +827,6 @@
                     <ul>
                         <li>Processed, priced, and curated book donations for sale</li>
                         <li>Configured and manage Square cash register system for book sales</li>
-                        <li>Technical assistant for Adult Literacy Class (Zoom meeting administration)</li>
                         <li>Supported library events and programming</li>
                     </ul>
                 </div>
