Update CV items and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -592,9 +592,10 @@
                     <h4>Digital Collections Intern</h4>
                     <div class="cv-meta">Pacific Atrocities Education • May 2025 - August 2025 • Remote</div>
                     <ul>
-                        <li>Accessioned declassified NARA documents using Dublin Core metadata standards</li>
-                        <li>Implemented new Omeka theme and created virtual exhibit on corporate bioweapons</li>
-                        <li>Applied item-level metadata to archival records in digital asset management platform</li>
+                        <li>Accessioned 500 pages of declassified NARA documents and created 45 records</li>
+                        <li>Applied Dublin Core item-level metadata to archival objects</li>
+                        <li>Implemented new Omeka theme to better highlight collections and exhibitions</li>
+                        <li>Created virtual exhibit on corporate collaborations in bioweapon development</li>
                         <li>Contributed to making primary sources about WWII Pacific theater accessible to scholars</li>
                     </ul>
                 </div>
@@ -802,12 +803,21 @@
                 </div>
 
                 <div class="cv-item">
-                    <h4>Volunteer Transcriber/Tagger</h4>
+                    <h4>Jail Librarian</h4>
+                    <div class="cv-meta">Urbana Books to Prisoners</div>
+                    <ul>
+                        <li>Providing institutional library services to incarcerated individuals</li>
+                        <li>Checked out materials and managed the physical collection</li>
+                        <li>Followed institution rules and policies</li>
+                    </ul>
+                </div>
+
+                <div class="cv-item">
+                    <h4>Transcribed Records Tagger</h4>
                     <div class="cv-meta">National Archives Citizen Archivist Program</div>
                     <ul>
                         <li>Applied controlled vocabulary to Revolutionary War pension plans written in cursive</li>
-                        <li>Tagged Civil War pension records with metadata schema</li>
-                        <li>Enhanced discoverability of historical documents through systematic metadata application</li>
+                        <li>Checked other volunteers transcriptions for quality assurance</li>
                     </ul>
                 </div>
 
@@ -815,9 +825,8 @@
                     <h4>Metadata Quality Volunteer</h4>
                     <div class="cv-meta">Open Library</div>
                     <ul>
-                        <li>Identified duplicate work records</li>
+                        <li>Identified duplicate work records while listing books online</li>
                         <li>Submitted duplicates to system administrators</li>
-                        <li>Improved searchability and data quality across bibliographic records</li>
                     </ul>
                 </div>
 
