Add project card for Corporate Collaboration exhibit

--- a/index.html
+++ b/index.html
@@ -299,6 +299,16 @@
             font-size: 0.95rem;
         }
 
+        .project-card-simple a {
+            color: var(--catalog-accent);
+            text-decoration: none;
+            font-weight: 500;
+        }
+
+        .project-card-simple a:hover {
+            text-decoration: underline;
+        }
+
         /* Projects Grid */
         .projects-grid {
             display: grid;
@@ -745,6 +755,16 @@
                         <ul>
                             <li>Generated research dataset of 1870s public library surveys by extracting data from OCR'd library directories</li>
                             <li>Applying computational text analysis to public domain texts</li>
+                        </ul>
+                    </div>
+
+                    <div class="project-card-simple">
+                        <h4>Corporate Collaboration with Bioweapons</h4>
+                        <div class="cv-meta">Summer 2025 • <a href="https://pacificatrocitiesedu.reclaim.hosting/exhibits/show/fort-detrick-corporations/introduction" target="_blank">View Exhibit →</a></div>
+                        <ul>
+                            <li>Created digital exhibit on Omeka showcasing declassified primary sources</li>
+                            <li>Demonstrated scope of 1950s bioweapons development through archival documentation</li>
+                            <li>Researched corporate involvement in biological warfare programs at Fort Detrick</li>
                         </ul>
                     </div>
 
