Revise project card text for bioweapons exhibit
Updated project card details for clarity and conciseness.

--- a/index.html
+++ b/index.html
@@ -762,8 +762,8 @@
                         <h4>Corporate Collaboration with Bioweapons</h4>
                         <div class="cv-meta">Summer 2025 • <a href="https://pacificatrocitiesedu.reclaim.hosting/exhibits/show/fort-detrick-corporations/introduction" target="_blank">View Exhibit →</a></div>
                         <ul>
-                            <li>Created digital exhibit on Omeka showcasing declassified primary sources</li>
-                            <li>Demonstrated scope of 1950s bioweapons development through archival documentation</li>
+                            <li>Created digital exhibit on Omeka using declassified primary sources</li>
+                            <li>Demonstrated scope of 1950s bioweapons development</li>
                             <li>Researched corporate involvement in biological warfare programs at Fort Detrick</li>
                         </ul>
                     </div>
