Revise job and project descriptions in index.html
Updated various job responsibilities and project descriptions to reflect past tense and added new projects.

--- a/index.html
+++ b/index.html
@@ -575,16 +575,19 @@
                     <h4>Student Affairs Graduate Assistant</h4>
                     <div class="cv-meta">University of Illinois iSchool • August 2025 - Present • Champaign, IL</div>
                     <ul>
-                        <li>Coordinate programs and events to connect MSLIS students with LIS professionals</li>
-                        <li>Design promotional materials including flyers, videos, and web content</li>
-                        <li>Conduct interviews with university librarians and archivists via Zoom</li>
-                        <li>Support peers with class selection and iSchool onboarding</li>
-                        <li>Plan and host community-building events for the LIS student body</li>
+                        <li>Coordinated programs and events to connect MSLIS students with LIS professionals</li>
+                        <li>Designed promotional materials including flyers, videos, and web content</li>
+                        <li>Conducted interviews with university librarians and archivists via Zoom</li>
+                        <li>Supported peers with class selection and iSchool onboarding</li>
+                        <li>Planned and hosted community-building events for the LIS student body</li>
                     </ul>
-                    <p style="margin-top: 1rem;"><strong>Web Application Developer</strong></p>
-                    <p style="margin-top: 0.25rem; margin-bottom: 0.5rem;"><em>Data Storytelling Toolkit for Libraries • December 2025 - Present</em></p>
+                    <p style="margin-top: 1rem;"><strong>Web Developer</strong></p>
+                    <p style="margin-top: 0.25rem; margin-bottom: 0.5rem;"><em>Data Storytelling Toolkit for Libraries (DSTL) • December 2025 - Present</em></p>
                     <ul>
-                        <li>Implemented data models on website</li>
+                        <li>DSTL is a collaboration between the University of Illinois and the Public Library Association</li>
+                        <li>Resdigned website by implementing user-feedback and WCAG compliance</li>
+                        <li>Assisted quantitative library system data and mapping it to qualitative narratives</li>
+                        <li>Prototyped divergent user journies and Javascript data visualization tools</li>
                     </ul>
                 </div>
 
@@ -592,9 +595,9 @@
                     <h4>Accessibility Consultant</h4>
                     <div class="cv-meta">University of Illinois, Disability Access Providers • August 2025 - Present • Urbana, IL</div>
                     <ul>
-                        <li>Remediate documents for accessibility compliance using assistive technology tools</li>
-                        <li>Audit and edit webpages for WCAG standards</li>
-                        <li>Ensure digital content accessibility for diverse user needs</li>
+                        <li>Remediated documents for accessibility compliance using assistive technology tools</li>
+                        <li>Audited and edit webpages for WCAG standards</li>
+                        <li>Ensured digital content accessibility for diverse user needs</li>
                     </ul>
                 </div>
 
@@ -750,11 +753,23 @@
                 
                 <div class="project-cards-grid">
                     <div class="project-card-simple">
-                        <h4>HathiTrust Research Center Practicum</h4>
+                        <h4>Historic Library Data</h4>
                         <div class="cv-meta">Fall 2025 - Present</div>
                         <ul>
-                            <li>Generated research dataset of 1870s public library surveys by extracting data from OCR'd library directories</li>
-                            <li>Applying computational text analysis to public domain texts</li>
+                            <li>A practicum project with HathiTrust Research Center</li> 
+                            <li>OCR performed on 19th century library reports to extract tabular data</li>
+                            <li>Cleaned, QA checked, and formatted the data as a JSON dataset</li>
+                            <li>Visualized the development of the American library system</li>
+                        </ul>
+                    </div>
+
+                    <div class="project-card-simple">
+                        <h4>PICO-8 Cartrdige Decompilation</h4>
+                        <div class="cv-meta">Fall 2025 • <a href="https://github.com/nicky-martin/celestep8-decompiled" target="_blank">View Repo →</a></div>
+                        <ul>
+                            <li>Created a preservation strategy for virtual game console, PICO-8</li>
+                            <li>Edited a decompiler to demonstrate how the data is encoded in the game image</li>
+                            <li>Published my code in the linked Github repository</li>
                         </ul>
                     </div>
 
